kubernetes/management/longhorn/manifests/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
  labels:
    backups.kalexlab.xyz/provision: "true"
    backups.kalexlab.xyz/use: "true"
