kubernetes/management/longhorn/manifests/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  annotations:
    external-dns.kubernetes.io/target: 192.168.10.20
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`longhorn.kalexlab.xyz`)
      services:
        - name: longhorn-frontend
          port: 80
      middlewares:
        - name: authentik-forward-auth
          namespace: authentik
  tls:
    secretName: longhorn-ingress-certificate
